--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -1,48 +1,47 @@
-<header class="mw-header nightingale-header">
+<header class="mw-header">
     {{>Logo}}
     {{>Sitename}}
-
-    <nav class="nightingale-nav">
-        {{#nightingale-header-portlets}}
-            <div class="mw-portlet mw-portlet-dropdown">
-                <input type="checkbox" id="cb-nav-{{id}}" class="mw-checkbox-hack-checkbox">
-                <label for="cb-nav-{{id}}" class="mw-checkbox-hack-button">{{label}} ▾</label>
-                <div class="mw-portlet-body">
-                    <ul>
-                        {{#array-items}}{{>ListItem}}{{/array-items}}
-                    </ul>
-                </div>
-            </div>
-        {{/nightingale-header-portlets}}
-    </nav>
-
     {{>Search}}
 
     <div class="nightingale-header-tools">
-        <div class="nightingale-icon-menus">
+
+        <div class="nightingale-text-menus">
             
-            {{#nightingale-content-edit}}
-            <div id="{{id}}" class="mw-portlet nightingale-edit-button">
+            <div class="mw-portlet nightingale-mobile-dropdown">
+                <input type="checkbox" id="cb-mob-menu" class="mw-checkbox-hack-checkbox">
+                <label for="cb-mob-menu" class="mw-checkbox-hack-button">{{nightingale-mobile-menu-label}} ▾</label>
                 <div class="mw-portlet-body">
-                    {{#array-links}}<a href="{{href}}" {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>{{text}}</a>{{/array-links}}
+                    <ul>{{#nightingale-mobile-menu}}{{>ListItem}}{{/nightingale-mobile-menu}}</ul>
                 </div>
             </div>
-            {{/nightingale-content-edit}}
 
-            {{#nightingale-content-talk}}
-            <div id="{{id}}" class="mw-portlet nightingale-talk-button">
+            <div class="mw-portlet nightingale-mobile-dropdown">
+                <input type="checkbox" id="cb-mob-tools" class="mw-checkbox-hack-checkbox">
+                <label for="cb-mob-tools" class="mw-checkbox-hack-button">{{nightingale-mobile-tools-label}} ▾</label>
                 <div class="mw-portlet-body">
-                    {{#array-links}}<a href="{{href}}" {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>{{text}}</a>{{/array-links}}
+                    <ul>{{#nightingale-mobile-tools}}{{>ListItem}}{{/nightingale-mobile-tools}}</ul>
                 </div>
             </div>
-            {{/nightingale-content-talk}}
 
+            {{#nightingale-has-mobile-links}}
+            <div class="mw-portlet nightingale-mobile-dropdown">
+                <input type="checkbox" id="cb-mob-links" class="mw-checkbox-hack-checkbox">
+                <label for="cb-mob-links" class="mw-checkbox-hack-button">{{nightingale-mobile-links-label}} ▾</label>
+                <div class="mw-portlet-body">
+                    <ul>{{#nightingale-mobile-links}}{{>ListItem}}{{/nightingale-mobile-links}}</ul>
+                </div>
+            </div>
+            {{/nightingale-has-mobile-links}}
+            
+        </div>
+
+        <div class="nightingale-icon-menus">
+            {{>ContentEdit}}
+            {{>ContentTalk}}
             {{>Notifications}}
-
             <div class="nightingale-menu-wrapper">
                 {{>Dropdown}}{{>ContentHybrid}}
             </div>
-
             <div class="nightingale-menu-wrapper nightingale-personal-wrapper">
                 {{>Dropdown}}{{>PersonalMenu}}
             </div>
